Fix user card result alignment issue

--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -63,6 +63,7 @@ a {
       margin: 0 auto;
 
       .people-list-container {
+        padding-top: 44px;
         float: right;
         width: 70.3%;
         padding-bottom: 80px;
@@ -388,7 +389,7 @@ a {
           float: none;
           width: 95%;
           margin: 0 auto;
-          padding-top: 10px;
+          padding-top: 20px;
         }
       }
 
